# Ray_Tracer

./: .gitignore  CMakeLists.txt  Common.h  Main.cpp  PPM.cpp  PPM.h  ScreenManager.cpp  ScreenManager.h  TODO
Core/: MyMathConstants.h
Materials/: CMakeLists.txt  Dialectric.cpp  Dialectric.h  Lambertian.cpp  Lambertian.h  Material.h  Metal.cpp  Metal.h
Shapes/: CMakeLists.txt  Hitable.h  Hitable_List.cpp  Hitable_List.h  Sphere.cpp  Sphere.h
core/: CMakeLists.txt  Camera.h  MyRandom.cpp  MyRandom.h  Ray.h  Vec3.h
tests/: CMakeLists.txt  Camera_Tests.cpp  Ray_Tracer_Tests.cpp  Vec3_Tests.cpp
